# codex-nag-hammadi

./: .gitignore  0_Etat-Projet_08-01-2026_00h37.md  0_Etat-Projet_08-01-2026_12h30.md  0_Etat-Projet_09-01-2026.md  0_Etat-Projet_10-01-2026_17h45.md  0_Etat-Projet_11-01-2026_23h00.md  BUILD.md  CMakeLists.txt  CMakePresets.json  Gnose Nag Hammadi.md  MACOS_INSTALL.md  NOTES_PROJET_GLOBALES.md  Run.command  VEO_SETUP_FINAL.md  _Etat-Projet_08-01-2026_23h03.md  _Etat-Projet_09-01-2026_03h20.md  analysis.txt  analyze_pdf.py  build.bat  check_pdf.py  check_pypdf.py  clean_codex_for_app.py  codex-nag-hammadi.md  convert_to_md.py  launch.bat  patch_plate_gen.py  peek.txt  peek_pdf.py  run.bat
.claude/: settings.local.json
_bmad-output/analysis/: brainstorming-session-2026-01-07.md
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics-and-stories.md  prd.md  product-brief.md
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
resources/: codex-nag-hammadi.qrc
resources/data/: gnostic_entities.json  mythic_categories.json  style_templates.json
src/: main.cpp
src/api/: ApiClient.cpp  ApiClient.h  CMakeLists.txt  ClaudeClient.cpp  ClaudeClient.h  EdgeTTSClient.cpp  EdgeTTSClient.h  ElevenLabsClient.cpp  ElevenLabsClient.h  GeminiClient.cpp  GeminiClient.h  ImagenClient.cpp  ImagenClient.h  VeoClient.cpp  VeoClient.h  VertexAuthenticator.cpp  VertexAuthenticator.h
src/core/: CMakeLists.txt
src/core/controllers/: PipelineController.cpp  PipelineController.h
src/core/entities/: GnosticEntities.cpp  GnosticEntities.h
src/core/services/: MythicClassifier.cpp  MythicClassifier.h  NarrationCleaner.cpp  NarrationCleaner.h  PromptBuilder.cpp  PromptBuilder.h  TextParser.cpp  TextParser.h
src/db/: CMakeLists.txt  Database.cpp  Database.h
src/db/repositories/: AudioRepository.cpp  AudioRepository.h  FavoriteRepository.cpp  FavoriteRepository.h  ImageRepository.cpp  ImageRepository.h  PassageRepository.cpp  PassageRepository.h  ProjectRepository.cpp  ProjectRepository.h
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/ui/dialogs/: ProjectDialog.cpp  ProjectDialog.h  SessionPickerDialog.cpp  SessionPickerDialog.h  SettingsDialog.cpp  SettingsDialog.h  SlideshowDialog.cpp  SlideshowDialog.h  VideoPreviewDialog.cpp  VideoPreviewDialog.h
src/ui/widgets/: ApiPricingDockWidget.cpp  ApiPricingDockWidget.h  AudioPlayerWidget.cpp  AudioPlayerWidget.h  ImageViewerWidget.cpp  ImageViewerWidget.h  InfoDockWidget.cpp  InfoDockWidget.h  PassagePreviewWidget.cpp  PassagePreviewWidget.h  SlideshowWidget.cpp  SlideshowWidget.h  TextViewerWidget.cpp  TextViewerWidget.h  TreatiseListWidget.cpp  TreatiseListWidget.h
src/utils/: ApiPricingManager.cpp  ApiPricingManager.h  CMakeLists.txt  Config.cpp  Config.h  Logger.cpp  Logger.h  MediaStorage.cpp  MediaStorage.h  MessageBox.h  SecureStorage.cpp  SecureStorage.h  ThemeManager.cpp  ThemeManager.h
texts_clean/: Gnose Nag Hammadi_display.md  Gnose Nag Hammadi_narration.md
